fix slideshow too slow on small resolutions

--- a/src/modules/landing/components/IconCardSlideshow/IconCardSlideshow.css
+++ b/src/modules/landing/components/IconCardSlideshow/IconCardSlideshow.css
@@ -25,3 +25,10 @@
 
   to { transform: translateX(-100%); }
 }
+
+@media only screen and (max-width: 680px) {
+  .icon-card-slideshow-wrapper {
+    -webkit-animation: marquee 10s linear infinite;
+    animation: marquee 10s linear infinite;
+  }
+}
